force-app/main/default/objects/ExpenseDetail__c/ExpenseDetail__c.object-meta.xml
<CustomObject>
    <label>経費明細</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>経費明細ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>