force-app/main/default/objects/ExpenseDetail__c/fields/AccountDate__c.field-meta.xml
<CustomField>
    <fullName>AccountDate__c</fullName>
    <label>計上日</label>
    <type>Date</type>
</CustomField>