force-app/main/default/objects/ExpenseDetail__c/fields/AccountItem__c.field-meta.xml
<CustomField>
    <fullName>AccountItem__c</fullName>
    <label>勘定科目</label>
    <length>20</length>
    <type>Text</type>
</CustomField>