force-app/main/default/objects/ExpenseDetail__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <label>発生日</label>
    <type>Date</type>
</CustomField>